Partial Class(in progress)
Dividing the implemented class according to the function and connecting them together.(Not finished yet.)
클래스를 기능에 따라 분할하고 연결하기(작업중)

--- a/OOP2-1+MineSweeper/OOP2-1+MineSweeper/OOP2-1+MineSweeper.vcxproj
+++ b/OOP2-1+MineSweeper/OOP2-1+MineSweeper/OOP2-1+MineSweeper.vcxproj
@@ -153,9 +153,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Mines.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Mines.cpp" />
     <ClCompile Include="OOP2-1+MineSweeper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
