--- a/OOP2-1+MineSweeper/OOP2-1+MineSweeper/OOP2-1+MineSweeper.vcxproj.filters
+++ b/OOP2-1+MineSweeper/OOP2-1+MineSweeper/OOP2-1+MineSweeper.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClInclude Include="Utils.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Mines.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OOP2-1+MineSweeper.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Map.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Mines.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
